--- a/composer.json
+++ b/composer.json
@@ -1,22 +1,23 @@
 {
-  "name": "zemit-cms/app",
+  "name": "phalcon-kit/app",
   "version": "1.0.0",
   "type": "project",
-  "description": "Start a new Zemit Project",
-  "keywords": ["framework", "phalcon", "cms", "zemit", "zemit-cms", "zemit cms", "zemit cms"],
-  "homepage": "https://www.zemit.com",
+  "description": "Start a new Phalcon Kit Project",
+  "keywords": [
+    "php",
+    "framework",
+    "php-framework",
+    "phalcon",
+    "phalcon-app",
+    "phalcon-php",
+    "phalcon-kit",
+    "phalcon-kit-core",
+    "phalcon-kit-app",
+    "phalcon-toolkit"
+  ],
+  "homepage": "https://github.com/phalcon-kit",
   "license": "BSD-3-Clause",
   "authors": [
-    {
-      "name": "Zemit Team",
-      "email": "contact@zemit.com",
-      "homepage": "https://www.zemit.com/"
-    },
-    {
-      "name": "Nuagerie Team",
-      "email": "contact@nuagerie.com",
-      "homepage": "https://www.nuagerie.com/"
-    },
     {
       "name": "Julien Turbide",
       "email": "contact@jturbide.com",
@@ -24,32 +25,43 @@
     },
     {
       "name": "Contributors",
-      "homepage": "https://github.com/zemit-cms/core/graphs/contributors"
+      "homepage": "https://github.com/phalcon-kit/core/graphs/contributors"
+    }
+  ],
+  "funding": [
+    {
+      "type": "github",
+      "url": "https://github.com/sponsors/jturbide"
     }
   ],
   "support": {
-    "issues": "https://github.com/zemit-cms/core/issues",
-    "source": "https://github.com/zemit-cms/core"
+    "issues": "https://github.com/phalcon-kit/core/issues",
+    "source": "https://github.com/phalcon-kit/core"
+  },
+  "config": {
+    "optimize-autoloader": true,
+    "apcu-autoloader": true,
+    "apcu-autoloader-prefix": "phalcon-kit-",
+    "preferred-install": "dist",
+    "sort-packages": true,
+    "allow-plugins": {
+      "cweagans/composer-patches": true
+    }
   },
   "minimum-stability": "dev",
   "prefer-stable": true,
-  "optimize-autoloader": true,
-  "apcu-autoloader": true,
-  "apcu-autoloader-prefix": "zemit-app-",
   "require": {
     "php": ">=8.4",
     "ext-phalcon": ">=5.9.3",
-    "zemit-cms/core": "^1.0 || dev-master"
+    "phalcon-kit/core": "^1.0 || dev-master"
   },
   "require-dev": {
-    "phalcon/ide-stubs": "^5.9.3",
-    "squizlabs/php_codesniffer": "^3.8",
-    "phpunit/phpunit": "^10.5"
+    "phalcon/ide-stubs": "^5.9.3"
   },
   "extra": {
     "installer-paths": {
       "public/vendor/{$name}": [
-        "zemit-cms/workspace"
+        "phalcon-kit/workspace"
       ]
     }
   },
@@ -61,7 +73,7 @@
   "autoload-dev": {
     "psr-4": {
       "Tests\\Unit\\": "tests/Unit",
-      "Zemit\\Tests\\Unit\\": "vendor/zemit-cms/core/tests"
+      "PhalconKit\\Tests\\Unit\\": "vendor/phalcon-kit/core/tests"
     }
   },
   "bin":[]
